# gunfire

./: CMakeLists.txt  main.cpp
Classes/: AppDelegate.cpp  Scene.cpp
Resources/: atlas.mtpf  config.cfg  pixelize.frag  todo
TexturePacker/: Atlas.mtpf
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/res/values/: strings.xml
src/: Animation.cpp  Animation.h  Application.cpp  Application.h  Bullet.cpp  Config.cpp  Config.h  Enemy.cpp  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Graphics.cpp  Graphics.h  Log.cpp  Log.h  ParticleConfigs.cpp  Particles.cpp  Particles.h  Player.cpp  Point.cpp  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Sound.cpp  Sound.h  SoundManager.cpp  Sprite.h  Text.h  Texture.cpp  TextureAtlas.cpp  TextureAtlas.h  TextureManager.cpp  TextureManager.h  Utils.cpp  Utils.h  main.cpp
src/cleansingFire/: Bullet.cpp  CFGameplayComponent.cpp  CleansingFireGame.cpp  Config.cpp  Dialog.cpp  Enemy.cpp  Player.cpp
src/cleansingFire/include/: Bullet.h  CFCfgStatic.h  CFGameplayComponent.h  CleansingFireGame.h  Config.h  Dialog.h  Enemy.h  Player.h
src/cleansingFire/specific/sfml/: sfml_cleansingFireApplication.cpp  sfml_cleansingFireGame.cpp
src/cleansingFire/specific/sfml/include/: sfml_cleansingFireApplication.h  sfml_cleansingFireGame.h
src/engine_specific/sfml/: sfml_Application.cpp  sfml_Application.h  sfml_EngineComponent.cpp  sfml_Game.cpp  sfml_Particles.cpp  sfml_ResourceManager.cpp  sfml_Resources.cpp  sfml_Shader.cpp  sfml_Shader.h  sfml_Sound.cpp  sfml_SoundManager.cpp  sfml_TextureAtlas.cpp  sfml_Utils.cpp  sfml_Utils.h
src/engine_specific/sfml/include/: sfml_Application.h  sfml_EngineComponent.h  sfml_Game.h  sfml_Resources.h  sfml_Shader.h  sfml_SoundManager.h  sfml_Sprite.h  sfml_TextureAtlas.h  sfml_Utils.h
src/gameLogic/: Config.cpp  Game.cpp  Rect.cpp
src/gameLogic/include/: Config.h  Game.h  GameObject.h
src/include/: Animation.h  Application.h  Bullet.h  Config.h  Enemy.h  Game.h  GameObject.h  Particles.h  Player.h  Rect.h  ResourceManager.h  Shader.h  Sound.h  SoundManager.h  Sprite.h  Texture.h  TextureAtlas.h  Utils.h
src/maverick/: Animation.cpp  Config.cpp  EngineComponent.cpp  Game.cpp  GameObject.cpp  GameServices.cpp  GameplayComponent.cpp  Log.cpp  Point.cpp  ShaderHelper.cpp  SoundManager.cpp  Utils.cpp
src/maverick/include/: Animation.h  CfgStatic.h  Config.h  EngineComponent.h  Game.h  GameObject.h  GameServices.h  GameplayComponent.h  Log.h  MiscForward.h  Point.h  Rect.h  ShaderHelper.h  SoundManager.h  Utils.h
src/maverick/specific/sfml/: sfml_Application.cpp  sfml_EngineComponent.cpp  sfml_Game.cpp  sfml_ParticleConfigs.cpp  sfml_Particles.cpp  sfml_ResourceManager.cpp  sfml_Sound.cpp  sfml_SoundManager.cpp  sfml_Texture.cpp  sfml_TextureAtlas.cpp  sfml_Utils.cpp
src/maverick/specific/sfml/include/: sfml_Application.h  sfml_EngineComponent.h  sfml_Game.h  sfml_Particles.h  sfml_ResourceManager.h  sfml_Shader.h  sfml_Sound.h  sfml_SoundManager.h  sfml_Text.h  sfml_Texture.h  sfml_TextureAtlas.h  sfml_Utils.h
